<resources>
    <string name="app_name">ZhenxunBot Manager</string>
    <string name="nav_header_desc" translatable="false">Navigation Header</string>
    <string name="nav_header_title" translatable="false">@string/app_name</string>
    <string name="nav_home">Home</string>
    <string name="nav_title_func"> </string>
    <string name="nav_console">Console</string>
    <string name="nav_plugin">Plugin</string>
    <string name="nav_friend_list">Friend/Group</string>
    <string name="nav_request">Request</string>
    <string name="nav_database_manage">Database Manage</string>
    <string name="nav_file_explorer">File Explorer</string>
    <string name="username_label">Username</string>
    <string name="username_hint">Please input username</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Please input password</string>
    <string name="welcome">Welcome to the <b>room of Mahiro</b></string>
    <string name="welcome2" translatable="false">真尋の小部屋へようこそ、お兄さん</string>
    <string name="change_api_address">API</string>
    <string name="login">Login</string>
    <string name="api_label">API Address</string>
    <string name="api_hint" translatable="false">scheme://host:port</string>
    <string name="change_api_title">Change API Address</string>
    <string name="back">Back</string>
    <string name="confirm">OK</string>
    <string name="error_input_api">Please input the API address</string>
    <string name="error_input_username">Please input username</string>
    <string name="error_input_password">Please input password</string>
    <string name="error_not_set_api">The api address has not been set yet</string>
    <string name="error_wrong_api_address">The api address is wrong</string>
    <string name="tab_normal">Normal</string>
    <string name="tab_admin">Admin</string>
    <string name="tab_superuser">Superuser</string>
    <string name="tab_admin_superuser">Admin Superuser</string>
    <string name="tab_hidden">Hidden</string>
    <string name="retry">Retry</string>
    <string name="edit">Edit</string>
    <string name="default_is_enabled">Default is Enabled</string>
    <string name="superuser_only">Superuser Only</string>
    <string name="cost_gold">Cost Gold</string>
    <string name="type">Type</string>
    <string name="commend">Commend</string>
    <string name="group_level">Group Level</string>
    <string name="cancel">Cancel</string>
    <string name="enabled">Enabled</string>
    <string name="error_valid_number">Please enter the valid number</string>
    <string name="error_string_is_empty">Please enter text</string>
    <string name="description_label"><b>Description:</b> %s</string>
    <string name="edit_config">Config</string>
    <string name="value_label">Value:</string>
    <string name="block_type">Block Type</string>
    <string name="block_type_all">All</string>
    <string name="block_type_group">Group</string>
    <string name="block_type_private">Private</string>
    <string name="error_network_error">There was an error with the network connection.</string>
    <string name="error_no_data">There seems to be no data.</string>
    <string name="enabled_task_format">Enabled Task: %s</string>
    <string name="group_level_format">Group Level: %d</string>
    <string name="member_num_format">Member Num: %d / %d</string>
    <string name="group_id_format">Group ID: %s</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="edit_group_config">Edit Group Config</string>
    <string name="clear_request">Clear</string>
    <string name="nickname_format">Nickname: %s</string>
    <string name="qq_format">QQ: %s</string>
    <string name="sex_format">Sex: %s</string>
    <string name="age_format">Age: %d</string>
    <string name="invite_group_format">Invite Group: %s</string>
    <string name="greet_format">Greet: %s</string>
    <string name="approve">Approve</string>
    <string name="refuse">Refuse</string>
    <string name="delete">Delete</string>
    <string name="tab_request_group">Group</string>
    <string name="tab_request_private">Private</string>
    <string name="prompt">Prompt</string>
    <string name="confirm_handle_request">%s the Request with id: %s ?</string>
    <string name="change_api_tips">· The app and the Bot are usually <u><b>NOT</b></u> on the same machine. You need a reverse proxy server or edit <u><b>env.dev</b></u>(dev environment), change the <u><b>HOST</b></u> to <u><b>0.0.0.0</b></u>
        \n\n· Usually input <u><b>http://server_host:api_port</b></u>
    </string>
    <string name="system_status">System Status</string>
    <string name="cpu">CPU</string>
    <string name="memory">Memory</string>
    <string name="disk">Disk</string>
    <string name="percent_format" translatable="false">%.1f%%</string>
    <string name="account_information">Account Information</string>
    <string name="group_information">Group Information</string>
    <string name="friends_label">Friends:</string>
    <string name="group_label">Group:</string>
    <string name="connected_duration_format">Connected for %dd%dh%dm%ds</string>
    <string name="plugin_status">Plugin Status</string>
    <string name="message_count">Message Count</string>
    <string name="active_group">Active Group</string>
    <string name="popular_plugin">Popular Plugin</string>
    <string name="save_password">Save Password</string>
    <string name="message_count_data_format">
        [
        {\"name\":\"Day\",\"count\":%d},
        {\"name\":\"Week\",\"count\":%d},
        {\"name\":\"Month\",\"count\":%d},
        {\"name\":\"Year\",\"count\":%d},
        {\"name\":\"Total\",\"count\":%d}
        ]
    </string>
    <string name="bot_logs">Bot Logs</string>
    <string name="default_state">Default State</string>
    <string name="plugin_author_format" translatable="false">\@%s</string>
    <string name="version">Version</string>
    <string name="menu_type">Menu Type</string>
    <string name="default_value_format"><b>Default Value:</b> %s</string>
    <string name="add">Add</string>
    <string name="reduce">Reduce</string>
    <string name="extra_configs">Extra Configs</string>
    <string name="error_cost_gold">Please enter the valid `Cost Gold`</string>
    <string name="error_menu_type">Please select a `Menu Type`</string>
    <string name="no_requests">There are no friend/group requests</string>
    <string name="dropdown">dropdown</string>
    <string name="groups">Groups</string>
    <string name="friends">Friends</string>
    <string name="send">Send</string>
    <string name="number_format">Num: %d</string>
    <string name="max_format">Max: %d</string>
    <string name="received_format">Received: %d</string>
    <string name="fn_call_format">Fn Call: %d</string>
    <string name="passive_tasks">Passive Tasks</string>
    <string name="favourite_plugins">Favourite Plugins</string>
    <string name="save">Save</string>
    <string name="group_switch">Group Function</string>
    <string name="banned">Banned</string>
    <string name="select_account">Select Account</string>
    <string name="user_information">User Information</string>
    <string name="type_format">Type: %s</string>
    <string name="max_length_format">Max Length: %s</string>
    <string name="nullable_format">Nullable: %s</string>
    <string name="execute_sql">EXEC SQL</string>
    <string name="rename">Rename</string>
    <string name="loading">Loading…</string>
    <string name="prompt_delete_file">Delete this file?</string>
    <string name="error_input_text">Please enter text</string>
    <string name="new_file">New File</string>
    <string name="new_folder">New Folder</string>
    <string name="edit_file">Edit File</string>
    <string name="text_too_long">The text is too long to edit</string>
</resources>