<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_list_item_round"
    android:orientation="vertical"
    android:padding="@dimen/list_item_padding">

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@drawable/bg_group_status"
        android:includeFontPadding="false"
        android:paddingHorizontal="4dp"
        android:paddingVertical="2dp"
        android:text="@string/disable"
        android:textColor="@color/color_group_status_text" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/SingleLineText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_widest"
        android:layout_toStartOf="@id/tv_status"
        android:textColor="@color/dn_black"
        android:textSize="@dimen/title_size_normal"
        android:textStyle="bold"
        tools:text="是真寻酱哒" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_marginTop="@dimen/margin_wide"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_id"
            style="@style/SingleLineText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/group_id_format"
            tools:text="群号: 1145141919" />

        <TextView
            android:id="@+id/tv_member_num"
            style="@style/SingleLineText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/member_num_format"
            tools:text="人数: 4 / 200" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_group_level"
        style="@style/SingleLineText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/group_level_format"
        tools:text="群权限: 5" />

    <TextView
        android:id="@+id/tv_enabled_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_group_level"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/enabled_task_format"
        tools:text="被动功能: 每日开箱重置提醒, 原神黄历提醒, epic免费游戏, 早晚安, 进群欢迎, 退群提醒, 广播, b站转发解析, 复读" />
</RelativeLayout>