<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/margin_normal"
    android:paddingBottom="@dimen/margin_narrow">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dn_black"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold"
        tools:text="create_time" />

    <TextView
        android:id="@+id/tv_type"
        style="@style/SingleLineText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_name"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_narrower"
        android:layout_toEndOf="@id/tv_name"
        android:textSize="@dimen/text_size_small"
        tools:text="@string/type_format" />

    <TextView
        android:id="@+id/tv_max_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_type"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/margin_narrower"
        android:minWidth="120dp"
        android:text="@string/max_length_format"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/tv_nullable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_type"
        android:layout_alignBottom="@id/tv_max_length"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_narrower"
        android:layout_toEndOf="@id/tv_max_length"
        android:minWidth="120dp"
        android:text="@string/nullable_format"
        android:textSize="@dimen/text_size_small" />
</RelativeLayout>