<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_round"
    android:minWidth="260dp"
    android:orientation="vertical"
    android:padding="@dimen/box_padding">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/edit_group_config"
        android:textColor="@color/dn_black"
        android:textSize="@dimen/title_size_normal"
        android:textStyle="bold" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_enabled"
        style="@style/Switch"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/normal_line_height"
        android:layout_marginTop="@dimen/margin_widest"
        android:text="@string/enabled"
        app:layout_constraintBottom_toTopOf="@+id/sw_default_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_module"
        app:switchPadding="@dimen/margin_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_group_level"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/normal_line_height"
            android:gravity="center_vertical"
            android:labelFor="@+id/til_group_level"
            android:text="@string/group_level"
            android:textColor="@color/dn_black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/til_group_level" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_group_level"
            style="@style/TextInputLayout.Thin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:orientation="horizontal"
            android:minWidth="0dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/til_command"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_type"
            app:layout_constraintTop_toBottomOf="@id/til_cost">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_group_level"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/normal_line_height"
                android:gravity="center"
                android:inputType="text"
                android:padding="0dp"
                android:textSize="@dimen/et_text_size"
                tools:text="1" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_weight="1"
            android:text="@string/confirm" />
    </LinearLayout>
</LinearLayout>