<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/normal_line_height"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_default_value"
        style="@style/SingleLineText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:textColor="@color/dn_black"
        tools:text="@string/default_value_format" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <TextView
            android:id="@+id/tv_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/value_label"
            android:textColor="@color/dn_black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_reduce"
            android:layout_width="@dimen/normal_line_height"
            android:layout_height="@dimen/normal_line_height"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/margin_normal"
            android:contentDescription="@string/reduce"
            android:src="@drawable/ic_config_reduce" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout.Thin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_line_height"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_toStartOf="@id/iv_reduce"
            android:layout_toEndOf="@id/tv_value"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                android:padding="0dp"
                tools:text="normal" />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>
</LinearLayout>